# wikistats

./: .gitignore  README.md  check_json.py  pyproject.toml  streamlit_app.py
data/: _wikidata_labels.json  wikidata_labels.json
notebooks/: explore.ipynb
notebooks/data/: graph_visualization.json
src/wikistats/: main.py
src/wikistats/enrichment/: wiki_lookup.py  wikidata_enrichment.py
src/wikistats/ingestion/: stream_ingestion.py
src/wikistats/visualization/: graph_viz_prep.py
warehouse/: dev.duckdb
wikistats_dbt/: dbt_project.yml
wikistats_dbt/models/: schema.yml
wikistats_dbt/models/dim/: dim_edges.sql
wikistats_dbt/models/mart/: dim_entities_clean.sql  fct_edges_clean.sql
wikistats_dbt/models/src/: src_wikistats.yml
wikistats_dbt/models/staging/: stg_wikidata_labels.sql  stg_wikistats_enriched.sql
wikistats_dbt/seeds/: seed_wiki_language_region.csv
